--- a/public/style/form.css
+++ b/public/style/form.css
@@ -8,6 +8,7 @@
     top: 10%;
     right:20% */
 }
+
 .feedForm {
     margin: 2rem 3rem;
     max-width: 500px;
@@ -15,22 +16,40 @@
     box-shadow: 2px 2px 5px gray;
     background-color: white;
 }
-.mul-select{
+
+.mul-select {
     width: 100%;
 }
+
 .submitBtn {
-    background-color:white;
+    background-color: white;
     border: 2px solid #30398C;
     border-radius: 5px;
     color: #30398C;
 }
-.submitBtn:hover{
+
+.submitBtn:hover {
     background-color: #30398C;
     color: white;
 }
+
+td {
+    text-transform: capitalize;
+}
+
+.margin-top {
+    margin-top: -2rem;
+}
+
 @media screen and (max-width:992px) {
     .feedForm {
         margin: 1rem;
         padding: 2rem 1rem;
+    }
+}
+
+@media screen and (max-width:420px) {
+    .usnForm {
+        padding: 3rem 1rem;
     }
 }
