--- a/views/studentAchievements.ejs
+++ b/views/studentAchievements.ejs
@@ -1,79 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Achievement</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css">
-      <!-- Google API -->
-      <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
-      <script src="https://apis.google.com/js/platform.js" async defer></script>
-      <!-- CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
-      <link href="../style/navbar.css" rel="stylesheet" media="all">
-      <link href="../style/form.css" rel="stylesheet" media="all">
-      <!--JS -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <!-- Google API -->
+    <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="../style/navbar.css" rel="stylesheet" media="all">
+    <link href="../style/form.css" rel="stylesheet" media="all">
+    <!--JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
-  <header >
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <span class="navbar-brand mb-0 h1">Student Achievement</span>  
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <span class="navbar-brand mb-0 h1">Student Achievement</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="navbarTogglerDemo03">
-        </ul>
-        <div>
-          <a class="nav-link signOut mx-2" href="/" onclick="signOut();" id="signOut">Sign Out</a>
-         </div>
-         <img src="<%=userData.image%>" alt="" class="image mx-2"/>
-      </div>
-    </nav>
-  </header>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="navbarTogglerDemo03">
+                </ul>
+                <div>
+                    <a class="nav-link signOut mx-2" href="/" onclick="signOut();" id="signOut">Sign Out</a>
+                </div>
+                <img src="<%=userData.image%>" alt="" class="image mx-2" />
+            </div>
+        </nav>
+    </header>
 
-  <main>
-    <%- include('adminForm') %>
-    <div class="container-fluid d-flex justify-content-left table-responsive  mt-5">
-        <table class="table">
-            
-            <thead>
-              <tr>
-                <th scope="col" class="d-none d-md-block">Sl.No</th>
-                <th scope="col">Usn</th>
-                <th scope="col">Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">Event</th>
-                <th scope="col">Details/Location</th>
-                <th scope="col">Level</th>
-                <th scope="col">Award</th>
-                <th scope="col">Department</th>
-                <th scope="col">Batch</th>
-                <th scope="col">Year</th>
-              </tr>
-            </thead>  
-            
-            <% let i = 1; for(let batch in data) { %>
-              <% for(let achievement of data[batch]) { %>
-                <tr>
-                  <th scope="col"><%=i%></th>
-                  <% for(let ele of achievement) { %>
-                    <th scope="col"><%=ele%></th>
-                  <% } %>
-                </tr>
-            <% i++; } } %>
+    <main>
+        <%- include('./forms/adminForm') %>
+            <div class="container-fluid d-flex justify-content-left table-responsive  mt-5">
+                <table class="table">
 
-          </table>
-    </div>
-</main>  
+                    <thead>
+                        <tr>
+                            <th scope="col" class="d-none d-md-block">Sl.No</th>
+                            <th scope="col">Usn</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Event</th>
+                            <th scope="col">Details/Location</th>
+                            <th scope="col">Level</th>
+                            <th scope="col">Award</th>
+                            <th scope="col">Department</th>
+                            <th scope="col">Batch</th>
+                            <th scope="col">Year</th>
+                        </tr>
+                    </thead>
+
+                    <% let i=1; for(let batch in data) { %>
+                        <% for(let achievement of data[batch]) { %>
+                            <tr>
+                                <th scope="col">
+                                    <%=i%>
+                                </th>
+                                <% for(let ele of achievement) { %>
+                                    <th scope="col">
+                                        <%=ele%>
+                                    </th>
+                                    <% } %>
+                            </tr>
+                            <% i++; } } %>
+
+                </table>
+            </div>
+    </main>
     <script src="js/signin.js"></script>
     <script src="js/signout.js"></script>
     <script src="js/multipleSelect.js"></script>
 </body>
+
 </html>
