--- a/views/student_signup.ejs
+++ b/views/student_signup.ejs
@@ -1,76 +1,78 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>
         Student Achievements
     </title>
-     <!-- Google API -->
-    <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
+    <!-- Google API -->
+    <meta name="google-signin-client_id"
+        content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="../style/navbar.css" rel="stylesheet" media="all">
     <link href="../style/form.css" rel="stylesheet" media="all">
     <link href="../style/signup.css" rel="stylesheet" media="all">
-    <link href="../style/feed.css" rel="stylesheet" media="all">
+    <link href="../style/image.css" rel="stylesheet" media="all">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </head>
-    <body>
-        <header>
-            <nav class="navbar">
-                <div class="container">
-                  <span class="navbar-brand mb-0 h1">Student Achievement</span>
-                  <div class="d-flex flex-row ">
-                      <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2" >Sign out</a>
-                  </div>
-                </div>
-              </nav>
-        </header>
-        
-        <main>
-            <div class="container-fluid  mt-5 pt-1">
-                <div class="row d-flex align-items-center justify-content-center">
-                    <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
-                        <form class="usnForm d-flex flex-column align-items-center justify-content-center" action="/getUserDetails" method="post" id="signInForm">
-                            <h1 id="display_sign_in" class="text-left">Sign in with Google</h1>
-                            <div class="d-flex flex-column align-items-center justify-content-center" class="display_signin_info">
-                                <h3 id="display_name" class="mt-2"></h3> 
-                                <h6 id="display_email" style="color: gray;"></h6>
-                                <img id="display_image" src="https://cdn2.iconfinder.com/data/icons/random-outline-3/48/random_14-512.png" style="border-radius: 0.5px" class="mx-2 rounded-circle m-2">
-                                <button class="btn btn-primary my-3 buttonBlue" id="continue-button" type="submit">Continue</button>
-                            </div>
-                        
 
-                            <input type="hidden" name="name" id="name" class="input-text"/>
-                            <input type="hidden" name="email" id="email" class="input-text"/>
-                            <input type="hidden" name="image" id="image" class="input-text" />
-                            <div class="container-fluid mb-3" id="display_signin_info">
-                                <div id="option-button " class="mt-2">
-                                    <span class="option-text" >
-                                      Change user
-                                    </span>
-                                  </div>
-                            </div>
-
-                            <div id="my-signin2" data-onsuccess="onSignIn"></div>
-                            
-                        </form>
-                    </div>
+<body>
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <span class="navbar-brand mb-0 h1">Student Achievement</span>
+                <div class="d-flex flex-row ">
+                    <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2">Sign out</a>
                 </div>
             </div>
-        </main>
-      
-        <!-- <script> 
-        window.addEventListener('load', (event) => {
-            const element = document.getElementById("my-signin2");
-            element.click();
-            });
-        </script> -->
-        
-        <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
-        <script src="js/signin.js"></script>
-        <script src="js/signout.js"></script>
-        <script src="/js/validate.js"></script>
-    </body>
+        </nav>
+    </header>
+
+    <main>
+        <div class="container-fluid  mt-3 pt-1">
+            <div class="row d-flex align-items-center justify-content-center">
+                <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
+                    <form class="usnForm d-flex flex-column align-items-center justify-content-center"
+                        action="/getUserDetails" method="post" id="signInForm">
+                        <h1 id="display_sign_in" class="text-left">Sign in with Google</h1>
+                        <div class="d-flex flex-column align-items-center justify-content-center"
+                            class="display_signin_info">
+                            <h3 id="display_name" class="mt-2"></h3>
+                            <h6 id="display_email" style="color: gray;"></h6>
+                            <img id="display_image"
+                                src="https://cdn2.iconfinder.com/data/icons/random-outline-3/48/random_14-512.png"
+                                style="border-radius: 0.5px" class="mx-2 rounded-circle m-2">
+                            <button class="btn btn-primary my-3 buttonBlue" id="continue-button"
+                                type="submit">Continue</button>
+                        </div>
+
+                        <input type="hidden" name="name" id="name" class="input-text" />
+                        <input type="hidden" name="email" id="email" class="input-text" />
+                        <input type="hidden" name="image" id="image" class="input-text" />
+                        <div class="container-fluid mb-3" id="display_signin_info">
+                            <div id="option-button " class="mt-2">
+                                <span class="option-text">
+                                    Change user
+                                </span>
+                            </div>
+                        </div>
+                        <div id="my-signin2" class="mt-3" data-onsuccess="onSignIn"></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    <script src="js/signin.js"></script>
+    <script src="js/signout.js"></script>
+    <script src="/js/validate.js"></script>
+</body>
+
 </html>
