--- a/views/verify_lecturer.ejs
+++ b/views/verify_lecturer.ejs
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>
         Student Achievements
     </title>
-     <!-- Google API -->
-    <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
+    <!-- Google API -->
+    <meta name="google-signin-client_id"
+        content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://apis.google.com/js/client:platform.js?onload=init" async defer></script>
     <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="../style/navbar.css" rel="stylesheet" media="all">
     <link href="../style/form.css" rel="stylesheet" media="all">
     <link href="../style/signin.css" rel="stylesheet" media="all">
     <link href="../style/feed.css" rel="stylesheet" media="all">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </head>
-    <body>
-        <header>
-            <nav class="navbar">
-                <div class="container">
-                  <span class="navbar-brand mb-0 h1">Student Achievement</span>
-                  <div class="d-flex flex-row ">
-                      <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2" >Sign out</a>
-                  </div>
-                </div>
-              </nav>
-        </header>
-        
-        <main>
-            <div class="container-fluid  mt-5 pt-3">
-                <div class="row d-flex align-items-center justify-content-center">
-                    <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
-                        <span class="badge badge-success">Registration Successfull</span>
-                        <form class="" action="/studentAchievements" method="post" id="register">
-                            <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>"/>
-                            <input type="hidden" name="selected_departments" values="" />
-                            <input type="hidden" name="selected_batches" values="" />
-                            <input type="hidden" name="from_year" values="0" />
-                            <input type="hidden" name="to_year" values="0" />
-                        </form>
-                    </div>
+
+<body>
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <span class="navbar-brand mb-0 h1">Student Achievement</span>
+                <div class="d-flex flex-row ">
+                    <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2">Sign out</a>
                 </div>
             </div>
-        </main>
-       
-        <script>
+        </nav>
+    </header>
+
+    <main>
+        <div class="container-fluid  mt-5 pt-3">
+            <div class="row d-flex align-items-center justify-content-center">
+                <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
+                    <span class="badge badge-success">Registration Successfull</span>
+                    <form class="" action="/studentAchievements" method="post" id="register">
+                        <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>" />
+                        <input type="hidden" name="selected_departments" values="" />
+                        <input type="hidden" name="selected_batches" values="" />
+                        <input type="hidden" name="from_year" values="0" />
+                        <input type="hidden" name="to_year" values="0" />
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script>
         window.addEventListener('load', (event) => {
-         document.getElementById("register").submit();
+            document.getElementById("register").submit();
         });
-        </script>
-        <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
-        <script src="js/signin.js"></script>
-        <script src="js/signout.js"></script>
-        <script src="/js/validate.js"></script>
-    </body>
+    </script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    <script src="js/signin.js"></script>
+    <script src="js/signout.js"></script>
+    <script src="/js/validate.js"></script>
+</body>
+
 </html>
