--- a/public/style/signup.css
+++ b/public/style/signup.css
@@ -26,3 +26,25 @@
     padding: 0 10px;
     font-style: italic;
 }
+
+p {
+    display: flex;
+    flex-direction: row;
+    color: gray;
+}
+
+p:before,
+p:after {
+    content: "";
+    flex: 1 1;
+    border-bottom: 1px solid;
+    margin: auto;
+}
+
+p:before {
+    margin-right: 10px
+}
+
+p:after {
+    margin-left: 10px
+}
