--- a/views/addAchievement.ejs
+++ b/views/addAchievement.ejs
@@ -2,88 +2,70 @@
 <html>
 
 <head>
-  <title>
-    Student Achievements
-  </title>
-  <meta name="google-signin-client_id"
-    content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <!-- CSS only -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link href="../style/navbar.css" rel="stylesheet" media="all">
-  <link href="../style/form.css" rel="stylesheet" media="all">
-  <link href="../style/feed.css" rel="stylesheet" media="all">
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    <title>
+        Student Achievements
+    </title>
+    <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- CSS only -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="../style/navbar.css" rel="stylesheet" media="all">
+    <link href="../style/form.css" rel="stylesheet" media="all">
+    <link href="../style/feed.css" rel="stylesheet" media="all">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-  <% if(is_achievement_updated==true) { %>
-    <script>
-      alert("Added Successfully");
-    </script>
-    <% }else if(is_achievement_updated==false) { %>
-      <script>
-        alert("Failed to add achievement");
-      </script>
-      <% } %>
 
-        <header>
-          <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1">Student Achievement</span>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-              aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <span class="navbar-brand mb-0 h1" style=" color: #30398C;">Student Achievement</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="navbarTogglerDemo03">
-                <li class="nav-item active">
-                </li>
-              </ul>
-              <div class="d-flex flex-column flex-md-row ">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="navbarTogglerDemo03">
+                    <li class="nav-item active">
+                    </li>
+                </ul>
+                <div class="d-flex flex-column flex-md-row ">
 
-                <form method="post" action="/viewAchievements">
-                  <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>" />
-                  <button class="nav-link add-achievement" style="color: green; margin-right: 1rem;" type="submit">View
+                    <form method="post" action="/viewAchievements">
+                        <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>" />
+                        <button class="nav-link add-achievement" style="color: green; margin-right: 1rem;" type="submit">View
                     Achievements </button>
-                </form>
-                <a class="nav-link signOut mx-2" href="/" onclick="signOut();" id="signOut">Sign Out</a>
-              </div>
-              <img src="<%=userData.image %>" alt="" class="image mx-2" />
+                    </form>
+                    <a class="nav-link signOut mx-2" href="/" onclick="signOut();" id="signOut">Sign Out</a>
+                </div>
+                <img src="<%=userData.image %>" alt="" class="image mx-2" />
             </div>
-          </nav>
-        </header>
+        </nav>
+    </header>
 
-        <main>
-          <div class="container-fluid p-0 m-0 ">
+    <main>
+        <div class="container-fluid p-0 m-0 ">
             <div class="row p-0 m-0">
-              <div class="col-12 col-md-6">
-                <%- include('./forms/addAchievementForm') %>
-              </div>
-              <div class="img-container col-12 col-sm-6 mt-5 pt-5 d-none d-md-block">
-                <img src="../img/progress.svg" class="add-img" />
-              </div>
-            </div>
-          </div>
-        </main>
+                <div class="col-12 col-md-6">
 
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-          integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-          crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-          integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-          crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-          integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-          crossorigin="anonymous"></script>
-        <script src="/js/validate.js"></script>
-        <script src="js/signout.js"></script>
+                    <%- include('./forms/addAchievementForm') %>
+                </div>
+                <div class="img-container col-12 col-sm-6 mt-5 pt-5 d-none d-md-block">
+                    <img src="../img/progress.svg" class="add-img" />
+                </div>
+            </div>
+        </div>
+    </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="/js/validate.js"></script>
+    <script src="js/signout.js"></script>
 </body>
 
 </html>
