--- a/views/forms/addAchievementForm.ejs
+++ b/views/forms/addAchievementForm.ejs
@@ -1,11 +1,26 @@
 <form class=" feedForm row needs-validation" novalidate id="feedForm" action="/updating_achievement" method="post">
+    <% if(is_achievement_updated==true) { %>
+        <div class="alert alert-success">
+            <strong>Congratulations!</strong> Achievement Added Successfully
+        </div>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                window.setTimeout(function() {
+                    $(".alert").alert('close');
+                }, 5000);
+            });
+        </script>
 
-  <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>" />
-
-  <h4 class="text-left">Enter the following details</h4>
-  <div class="col-12 mt-3">
-    <label for="year" class="form-label">Select The Year of Study </label>
-    <select name="year" class="form-select" required>
+        <% }else if(is_achievement_updated==false) { %>
+            <div class="alert alert-danger" role="alert">
+                <strong>Oops!</strong> Failed to Achievement.Try Again
+            </div>
+            <% } %>
+                <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>" />
+                <h4 class="text-left">Enter the following details</h4>
+                <div class="col-12 mt-3">
+                    <label for="year" class="form-label">Select The Year of Study </label>
+                    <select name="year" class="form-select" required>
       <option value="">--Select the Year of Study --</option>
       <% for(var i=1; i <=userData.presentYear; ++i) { %>
         <option value="<%=i%>">
@@ -13,14 +28,14 @@
         </option>
         <% }%>
     </select>
-    <div class="invalid-feedback">
-      Year Cannot be Empty
-    </div>
-  </div>
+                    <div class="invalid-feedback">
+                        Year Cannot be Empty
+                    </div>
+                </div>
 
-  <div class="col-12 mt-3">
-    <label for="nameOfEvent" class="form-label">Select The Event Name </label>
-    <select name="nameOfEvent" class="form-select" required id="nameOfEvent">
+                <div class="col-12 mt-3">
+                    <label for="nameOfEvent" class="form-label">Select The Event Name </label>
+                    <select name="nameOfEvent" class="form-select" required id="nameOfEvent">
       <option value="">--Select The Event Name--</option>
       <option value="Quiz Competition">Quiz Competition</option>
       <option value="Coding Competition/Hackathons">Coding Competition/Hackathons</option>
@@ -30,25 +45,24 @@
       <option value="Paper or Publications">Paper or Publications</option>
       <option value="Other">Other</option>
     </select>
-    <div class="invalid-feedback">
-      Event Name Cannot be Empty
-    </div>
-  </div>
+                    <div class="invalid-feedback">
+                        Event Name Cannot be Empty
+                    </div>
+                </div>
 
 
-  <div class="col-12 mt-3">
-    <label for="detailsOfEvent" class="form-label">Enter the details or location of the event</label>
-    <textarea class="form-control" id="detailsOfEvent" name="detailsOfEvent"
-      placeholder="Enter the details or location of the event" required></textarea>
+                <div class="col-12 mt-3">
+                    <label for="detailsOfEvent" class="form-label">Enter the details or location of the event</label>
+                    <textarea class="form-control" id="detailsOfEvent" name="detailsOfEvent" placeholder="Enter the details or location of the event" required></textarea>
 
-    <div class="invalid-feedback">
-      Add the location or any other details
-    </div>
-  </div>
+                    <div class="invalid-feedback">
+                        Add the location or any other details
+                    </div>
+                </div>
 
-  <div class="col-12 mt-3">
-    <label for="level" class="form-label">Select the level </label>
-    <select name="level" class="form-select" required>
+                <div class="col-12 mt-3">
+                    <label for="level" class="form-label">Select the level </label>
+                    <select name="level" class="form-select" required>
       <option value="">--Select the level of event--</option>
       <option value="college">College</option>
       <option value="district">District</option>
@@ -57,28 +71,30 @@
       <option value="international">International</option>
     </select>
 
-    <div class="invalid-feedback">
-      Level Cannot be empty
-    </div>
-  </div>
+                    <div class="invalid-feedback">
+                        Level Cannot be empty
+                    </div>
+                </div>
 
-  <div class="col-12 mt-3">
-    <label class="form-label" name="award"> Did you win any award in this event?</label>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="award" id="yes" value="yes">
-      <label class="form-check-label" for="yes">
+                <div class="col-12 mt-3">
+                    <label class="form-label" name="award"> Did you win any award in this event?</label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="award" id="yes" value="yes">
+                        <label class="form-check-label" for="yes">
         Yes
       </label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="award" id="no" value="no" checked>
-      <label class="form-check-label" for="no">
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="award" id="no" value="no" checked>
+                        <label class="form-check-label" for="no">
         No
       </label>
-    </div>
-  </div>
+                    </div>
+                </div>
 
-  <div class="col-12">
-    <button class="submitBtn btn  mt-5" type="submit" value="Submit">Submit</button>
-  </div>
+                <div class="col-12">
+                    <button class="submitBtn btn  mt-5" type="submit" value="Submit">Submit</button>
+                </div>
 </form>
+<script>
+</script>
