--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,15 +6,12 @@
         Student Achievements
     </title>
     <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="../style/navbar.css" rel="stylesheet" media="all">
     <link href="../style/form.css" rel="stylesheet" media="all">
     <link href="../style/image.css" rel="stylesheet" media="all">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,12 +26,11 @@
     <main>
         <div class="container-fluid">
             <div class="row align-items-center">
-                <div class="col-12 col-sm-6 pt-5 d-none d-md-block mt-5"
-                    style="text-align: center; padding-left: 40px;">
-                    <img class="hero-img d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png" />
+                <div class="col-12 col-sm-6 pt-4 d-none d-md-block mt-4" style="text-align: center; padding-left: 40px;">
+                    <img class="w-75 d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png" />
                 </div>
-                <div class="col-12 col-md-6 pt-5 p-5 align-items-center mt-5">
-                    <div class="row usnForm">
+                <div class="col-12 col-md-6 pt-4 p-3 p-xl-4 align-items-center mt-4">
+                    <div class="row usnForm  m-1 m-lg-5 p-md-5">
                         <h4 class="text-left">Student Achievement</h4>
                         <p>One stop destination to save all you Achievements</p>
                         <div style="color:red;">
@@ -45,8 +41,7 @@
                                 up</button>
                         </form>
                         <form class="mt-2" action="/student_signin" method="post" id="signInForm">
-                            <button class="btn btn-outline-success btn-lg btn-block w-100" type="submit"
-                                >Student sign in</button>
+                            <button class="btn btn-outline-success btn-lg btn-block w-100" type="submit">Student sign in</button>
                         </form>
                         <form class="mt-2" action="/admin_signin" method="post" id="signInForm">
                             <button class="btn btn-outline-danger btn-lg btn-block w-100" type="submit">Admin sign
