--- a/views/studentAchievements.ejs
+++ b/views/studentAchievements.ejs
@@ -26,7 +26,7 @@
 
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1">Student Achievement</span>
+            <span class="navbar-brand mb-0 h1" style=" color: #30398C;">Student Achievement</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,7 +43,7 @@
 
     <main>
         <%- include('./forms/adminForm') %>
-            <div class="container-fluid d-flex justify-content-left table-responsive  mt-5">
+            <div class="container-fluid  justify-content-left table-responsive  mt-5 d-none d-md-block">
                 <table class="table">
 
                     <thead>
