--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                     <img class="w-75 d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png" />
                 </div>
                 <div class="col-12 col-md-6 pt-4 p-3 p-xl-4 align-items-center mt-4">
-                    <div class="row usnForm  m-1 m-lg-5 p-md-5">
+                    <div class="row usnForm  m-1 m-lg-5 p-md-5" style="max-width:500px">
                         <h4 class="text-left">Student Achievement</h4>
                         <p>One stop destination to save all you Achievements</p>
                         <div style="color:red;">
